--- a/main_doc.tex
+++ b/main_doc.tex
@@ -16,34 +16,34 @@ Advisor: Dr. Haimeng Zhang\footnote{h\_zhang5@uncg.edu}\\ \small{University of N
 
 \maketitle 
 \thispagestyle{empty}
-\input{abstract.tex}
+\input{chapters/abstract.tex}
 
 
 \newpage
 %%------------------------------------------------------------------%%
 \chapter{Introduction (due Augth 4th)}
-\input{Introduction.tex}
+\input{chapters/Introduction.tex}
 
 %%------------------------------------------------------------------%%
 \chapter{Literature Review (due August 28)}
-\input{literature.tex} 
+\input{chapters/literature.tex}
 
 
 %%------------------------------------------------------------------%%
 \chapter{Covariance and Variogram Estimation on the Cricle (due July 31)}
-\input{circle.tex}
+\input{chapters/circle.tex}
 
 %%------------------------------------------------------------------%%
 \chapter{Random Process on a Sphere (due August 21 }
-\input{sphere.tex}
+\input{chapters/sphere.tex}
 
 %%------------------------------------------------------------------%%
 \chapter{Global Data Generation on the Sphere (due August 21)}
-\input{datageneration.tex}
+\input{chapters/datageneration.tex}
 
 %%------------------------------------------------------------------%%
 \chapter{Future Research (due August 28)}
-\input{future.tex}
+\input{chapters/future.tex}
 
 \bibliography{biblography}
 \end{document}
