--- a/Dissertation.tex
+++ b/Dissertation.tex
@@ -82,7 +82,7 @@
 %%------------------------------------------------------------------%%
 %% -------------------------- Abstract -----------------------------%%
 %%------------------------------------------------------------------%%
-\input{abstract.tex}
+\input{chapters/abstract.tex}
 
 %%------------------------------------------------------------------%%
 %%---------------------------- Title page --------------------------%%
@@ -159,28 +159,28 @@ In memory of my fater, Donald Anthony Vanlangenberg
 
 %%------------------------------------------------------------------%%
 \chapter{Introduction (due Augth 4th)}
-\input{Introduction.tex} 
+\input{chapters/Introduction.tex}
 
 %%------------------------------------------------------------------%%
 \chapter{Literature Review (due August 28)}
-\input{literature.tex}
+\input{chapters/literature.tex} 
 
 
 %%------------------------------------------------------------------%%
 \chapter{Covariance and Variogram Estimation on the Cricle (due July 31)}
-\input{circle.tex}
+\input{chapters/circle.tex}
 
 %%------------------------------------------------------------------%%
 \chapter{Random Process on a Sphere (due August 21)}
-\input{sphere.tex}
+\input{chapters/sphere.tex}
 
 %%------------------------------------------------------------------%%
 \chapter{Global Data Generation on the Sphere (due August 21)}
-\input{datageneration.tex}
+\input{chapters/datageneration.tex}
 
 %%------------------------------------------------------------------%%
 \chapter{Future Research (due August 28)}
-\input{future.tex}
+\input{chapters/future.tex}
 
 %%------------------------------------------------------------------%%
 %%------------------------ Bibliography ----------------------------%%
