--- a/main_doc.tex
+++ b/main_doc.tex
@@ -34,7 +34,7 @@ Advisor: Dr. Haimeng Zhang\footnote{h\_zhang5@uncg.edu}\\ \small{University of N
 \input{chapters/circle.tex}
 
 %%------------------------------------------------------------------%%
-\chapter{Random Process on a Sphere (due August 21 }
+\chapter{Random Process on a Sphere (due August 21) }
 \input{chapters/sphere.tex}
 
 %%------------------------------------------------------------------%%
