--- a/Dissertation.tex
+++ b/Dissertation.tex
@@ -9,7 +9,9 @@
 %% This is where you can put other packages that you may need. 
 %% Note that several packages including amsmath, amsthm, amsfonts,
 %% hyperref have already been loaded.  
-
+\usepackage{undertilde}
+\usepackage{float}
+\usepackage{enumerate}
 
 
 %%------------------------------------------------------------------%% 
@@ -158,7 +160,7 @@ In memory of my fater, Donald Anthony Vanlangenberg
 \mainmatter % required
 
 %%------------------------------------------------------------------%%
-\chapter{Introduction (due Augth 4th)}
+\chapter{Introduction}
 \input{chapters/Introduction.tex}
 
 %%------------------------------------------------------------------%%
@@ -167,7 +169,7 @@ In memory of my fater, Donald Anthony Vanlangenberg
 
 
 %%------------------------------------------------------------------%%
-\chapter{Covariance and Variogram Estimation on the Cricle (due July 31)}
+\chapter{Covariance and Variogram Estimation on the Cricle}
 \input{chapters/circle.tex}
 
 %%------------------------------------------------------------------%%
