--- a/template.tex
+++ b/template.tex
@@ -15,6 +15,7 @@
 \usepackage{amsmath, amsfonts}
 \usepackage{comment}
 \usepackage{hyperref}
+\usepackage{enumerate}
 \usepackage{float}
 %\usepackage{cite}
 \usepackage{ natbib}
@@ -29,7 +30,7 @@
 \lhead{ }
 %\rhead{May 2016}
 \fancyfoot{ }
-\rfoot{Proposal defense $|$ \thepage}
+\rfoot{Dissertation $|$ \thepage}
 \lfoot{Chris Vanlangenberg}
 \date{}
 
