--- a/Dissertation.tex
+++ b/Dissertation.tex
@@ -159,13 +159,14 @@ In memory of my fater, Donald Anthony Vanlangenberg
 %% proceed to the main part.  The rest of your document goes below.
 \mainmatter % required
 
+
 %%------------------------------------------------------------------%%
 \chapter{Introduction}
 \input{chapters/Introduction.tex}
 
 %%------------------------------------------------------------------%%
 \chapter{Literature Review (due August 28)}
-\input{chapters/literature.tex} 
+%\input{chapters/literature.tex}
 
 
 %%------------------------------------------------------------------%%
@@ -173,11 +174,11 @@ In memory of my fater, Donald Anthony Vanlangenberg
 \input{chapters/circle.tex}
 
 %%------------------------------------------------------------------%%
-\chapter{Random Process on a Sphere (due August 21)}
+\chapter{Random Process on a Sphere}
 \input{chapters/sphere.tex}
 
 %%------------------------------------------------------------------%%
-\chapter{Global Data Generation on the Sphere (due August 21)}
+\chapter{Global Data Generation on the Sphere}
 \input{chapters/datageneration.tex}
 
 %%------------------------------------------------------------------%%
