--- a/biblography.bib
+++ b/biblography.bib
@@ -71,6 +71,19 @@
   Pages                    = {49--63}
 }
 
+@Article{DUFOUR1976107,
+  author =  {Jean-Marie Dufour and Roch Roy},
+  title =   {On spectral estimation for a homogeneous random process on the circle},
+  journal = {Stochastic Processes and their Applications},
+  year =    {1976},
+  volume =  {4},
+  number =  {2},
+  pages =   {107 - 120},
+  doi =     {http://dx.doi.org/10.1016/0304-4149(76)90029-6},
+  issn =    {0304-4149},
+  url =     {http://www.sciencedirect.com/science/article/pii/0304414976900296}
+}
+
 @Article{Gallager2008,
   Title                    = {Circularly-symmetric Gaussian random vectors},
   Author                   = {Gallager, Robert G},
@@ -129,29 +142,27 @@
 }
 
 @Article{Huang2012,
-  Title                    = {A simplified representation of the covariance structure of axially symmetric processes on the sphere},
-  Author                   = {Huang, Chunfeng and Zhang, Haimeng and Robeson, Scott M},
-  Journal                  = {Statistics \& Probability Letters},
-  Year                     = {2012},
-  Number                   = {7},
-  Pages                    = {1346--1351},
-  Volume                   = {82},
-
-  Owner                    = {Christopher},
-  Publisher                = {Elsevier},
-  Timestamp                = {2015.02.18}
+  author    = {Huang, Chunfeng and Zhang, Haimeng and Robeson, Scott M},
+  title     = {A simplified representation of the covariance structure of axially symmetric processes on the sphere},
+  journal   = {Statistics \& Probability Letters},
+  year      = {2012},
+  volume    = {82},
+  number    = {7},
+  pages     = {1346--1351},
+  owner     = {Christopher},
+  publisher = {Elsevier},
+  timestamp = {2015.02.18},
 }
 
 @Article{HuangZhangRobeson2011,
-  author =        {Huang, Chunfeng and Zhang, Haimeng and Robeson, Scott M},
-  title =         {On the validity of commonly used covariance and variogram functions on the sphere},
-  journal =       {Mathematical Geosciences},
-  year =          {2011},
-  volume =        {43},
-  number =        {6},
-  pages =         {721--733},
-  __markedentry = {[Chris:6]},
-  publisher =     {Springer}
+  author    = {Huang, Chunfeng and Zhang, Haimeng and Robeson, Scott M},
+  title     = {On the validity of commonly used covariance and variogram functions on the sphere},
+  journal   = {Mathematical Geosciences},
+  year      = {2011},
+  volume    = {43},
+  number    = {6},
+  pages     = {721--733},
+  publisher = {Springer},
 }
 
 @Article{JeongJun2015,
@@ -301,15 +312,6 @@
   Timestamp                = {2015.03.24}
 }
 
-@Article{Stein2007,
-  author =    {Stein, Michael L},
-  title =     {Spatial variation of total column ozone on a global scale},
-  journal =   {The Annals of Applied Statistics},
-  year =      {2007},
-  pages =     {191--210},
-  publisher = {JSTOR}
-}
-
 @InCollection{Sun2012,
   Title                    = {Geostatistics for large datasets},
   Author                   = {Sun, Ying and Li, Bo and Genton, Marc G},
@@ -357,12 +359,110 @@
   author =    {Yaglom, AM}
 }
 
-@InProceedings{Yaglomothers1961,
-  author =    {Yaglom, Akiva M and others},
-  title =     {Second-order homogeneous random fields},
+@InProceedings{Yaglom1961,
+  author    = {Yaglom, Akiva M},
+  title     = {Second-order homogeneous random fields},
   booktitle = {Proc. 4th Berkeley Sympos. Math. Statist. and Prob},
-  year =      {1961},
-  volume =    {2},
-  pages =     {593--622}
+  year      = {1961},
+  volume    = {2},
+  pages     = {593--622},
 }
 
+@Article{Huang201633,
+  author   = {Chunfeng Huang and Haimeng Zhang and Scott M. Robeson},
+  title    = {Intrinsic random functions and universal kriging on the circle},
+  journal  = {Statistics \& Probability Letters},
+  year     = {2016},
+  volume   = {108},
+  pages    = {33 - 39},
+  abstract = {Abstract Intrinsic random functions (IRF) provide a versatile approach when the assumption of second-order stationarity is not met. Here, we develop the \{IRF\} theory on the circle with its universal kriging application. Unlike \{IRF\} in Euclidean spaces, where differential operations are used to achieve stationarity, our result shows that low-frequency truncation of the Fourier series representation of the \{IRF\} is required for such processes on the circle. All of these features and developments are presented through the theory of reproducing kernel Hilbert space. In addition, the connection between kriging and splines is also established, demonstrating their equivalence on the circle. },
+  doi      = {http://dx.doi.org/10.1016/j.spl.2015.09.023},
+  issn     = {0167-7152},
+  keywords = {Reproducing kernel Hilbert space, Stationarity, Spline, Brownian bridge },
+  url      = {http://www.sciencedirect.com/science/article/pii/S0167715215003417},
+}
+
+@Article{DeMazancourt1983,
+  author    = {De Mazancourt, T and Gerlic, D},
+  title     = {The inverse of a block-circulant matrix},
+  journal   = {IEEE transactions on antennas and propagation},
+  year      = {1983},
+  volume    = {31},
+  number    = {5},
+  pages     = {808--810},
+  publisher = {Institute of Electrical and Electronics Engineers},
+}
+
+@Article{Tee2005,
+  author    = {Tee, Garry J},
+  title     = {Eigenvectors of block circulant and alternating circulant matrices},
+  year      = {2005},
+  publisher = {Massey University},
+}
+
+@Book{Muir1920,
+  title  = {The theory of determinants},
+  year   = {1920},
+  author = {Muir, Sir Thomas},
+}
+
+@Article{Trapp1973,
+  author  = {Trapp, George E},
+  title   = {Inverses of circulant matrices and block circulant matrices},
+  journal = {Kyungpook Mathematical Journal},
+  year    = {1973},
+  volume  = {13},
+  number  = {1},
+  pages   = {11--20},
+}
+
+@Article{schoenberg1942,
+  author    = {Schoenberg, I. J.},
+  title     = {Positive definite functions on spheres},
+  journal   = {Duke Math. J.},
+  year      = {1942},
+  volume    = {9},
+  number    = {1},
+  pages     = {96--108},
+  month     = {03},
+  doi       = {10.1215/S0012-7094-42-00908-6},
+  fjournal  = {Duke Mathematical Journal},
+  publisher = {Duke University Press},
+  url       = {http://dx.doi.org/10.1215/S0012-7094-42-00908-6},
+}
+
+@Article{Gneiting2013,
+  author    = {Gneiting, Tilmann},
+  title     = {Strictly and non-strictly positive definite functions on spheres},
+  journal   = {Bernoulli},
+  year      = {2013},
+  volume    = {19},
+  number    = {4},
+  pages     = {1327--1349},
+  publisher = {Bernoulli Society for Mathematical Statistics and Probability},
+}
+
+@Book{Yadrenko1983,
+  title         = {Spectral theory of random fields},
+  publisher     = {Optimization Software},
+  year          = {1983},
+  author        = {Yadrenko, Mikhail Iosifovich},
+  __markedentry = {[Chris:]},
+}
+
+@Misc{TMI,
+  title = {RSS. Tmi data},
+  url   = {http://www.remss.com/missions/tmi},
+}
+
+@Article{Stein2007,
+  author        = {Stein, Michael L},
+  title         = {Spatial variation of total column ozone on a global scale},
+  journal       = {The Annals of Applied Statistics},
+  year          = {2007},
+  pages         = {191--210},
+  __markedentry = {[Chris:6]},
+  publisher     = {JSTOR},
+}
+
+@Comment{jabref-meta: databaseType:bibtex;}
