--- a/template.tex
+++ b/template.tex
@@ -11,16 +11,10 @@
 \DefineVerbatimEnvironment{Sinput}{Verbatim} {xleftmargin=0em,frame=single}
 \DefineVerbatimEnvironment{Soutput}{Verbatim} {xleftmargin=0em,frame=single}
 
-\usepackage{amssymb, mathrsfs}
-\usepackage{amsmath, amsfonts}
-\usepackage{comment}
-\usepackage{hyperref}
-\usepackage{enumerate}
-\usepackage{float}
-%\usepackage{cite}
-\usepackage{ natbib}
-\usepackage{color, multirow, setspace, fancyhdr}
-\usepackage{apalike}
+\usepackage{amssymb, mathrsfs, amsmath, amsfonts}
+\usepackage{enumerate, comment}
+\usepackage{hyperref, natbib,apalike, float} %cite
+\usepackage{color, multirow, setspace, fancyhdr,graphicx}
 \usepackage{undertilde}
 \usepackage[bottom]{footmisc}
 
