--- a/template.tex
+++ b/template.tex
@@ -48,17 +48,19 @@
 \newcommand{\blue}[1]{\textcolor{blue}{\emph{#1}}}
 \newcommand{\red}[1]{\textcolor{red}{\emph{#1}}}
 \newcommand{\twoc}[2]{{\textcolor{blue}{#1}} and {\textcolor{red}{#2}}}
-%\newcommand{\normalpdf}{\beq x^2+1=5 \eeq}
+
 
 \newcommand{\xn}{x_1,\ldots, x_n}
 \newcommand{\Xn}{X_1,\ldots, X_n}
+\newcommand\floor[1]{\lfloor{#1}\rfloor}
+\newcommand\ceil[1]{\lceil{#1}\rceil}
 
 \newcommand{\R}{\mathbb{R}}
 \newcommand{\C}{\mathbb{C}}
 \newcommand{\pd}{positive definite }
 
 
-%\newcommand{\code}[1]{{\smaller\texttt{#1}}}
+
 \newcommand{\code}[1]{{\small\texttt{#1}}}
 \newcommand{\pkg}[1]{{\normalfont\textsf{#1}}}
 \newcommand{\var}[1] {{\normalfont\textbf{#1}}}
