--- a/Dissertation.tex
+++ b/Dissertation.tex
@@ -61,6 +61,8 @@
 
 \newcommand{\xn}{x_1,\ldots, x_n}
 \newcommand{\Xn}{X_1,\ldots, X_n}
+\newcommand\floor[1]{\lfloor{#1}\rfloor}
+\newcommand\ceil[1]{\lceil{#1}\rceil}
 
 \newcommand{\R}{\mathbb{R}}
 \newcommand{\C}{\mathbb{C}}
