--- a/Dissertation.tex
+++ b/Dissertation.tex
@@ -167,8 +167,8 @@ In memory of my fater, Donald Anthony Vanlangenberg
 \input{chapters/Introduction.tex}
 
 %%------------------------------------------------------------------%%
-\chapter{Literature Review (due August 28)}
-%\input{chapters/literature.tex}
+\chapter{Literature Review}
+\input{chapters/literature.tex}
 
 
 %%------------------------------------------------------------------%%
