--- a/P1_results.tex
+++ b/P1_results.tex
@@ -10,12 +10,13 @@
 %\subsubsection{Model comparison}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+
 {\bf Simulated data sample:}
 
 \begin{figure}[H]
 \label{grid_plot_model2}
 \begin{center}
-\includegraphics [scale=1]{graphs/Data_sample_120_model2.pdf}
+\includegraphics [width=0.9\textwidth ]{graphs/Data_sample_120_model2.pdf}
 \caption{Four consecutive axially symmetric data snapshots based on model 2, grid resolution $2^0\times 1^0$ (data scale -10 and 10).}
 \end{center}
 \end{figure}
@@ -23,21 +24,31 @@
 \newpage
 {\bf Comprison of the proposed models with MOM estimates:}
 
+
+
+\begin{figure}[H]
+\centering
+\includegraphics [width=0.9\textwidth ]{graphs/results_variogram_comparison}
+% width=12cm,height=12cm
+\caption[Variogram comparison]{Variogram comparison when $u=0$ }
+\end{figure}
+
+
 \begin{itemize}
 \item Model 1\\
 
 \begin{figure}[H]
 \begin{center}
-\fbox{\includegraphics [width=12cm,height=12cm,keepaspectratio]{graphs/Model1.pdf}}
+\includegraphics [width=0.75\textwidth ]{graphs/Model1.pdf}
 \caption{Cross covariance comparison of model1}
 \end{center}
 \end{figure}
 
-\newpage
+
 \item Model 2
 \begin{figure}[H]
 \begin{center}
-\fbox{\includegraphics [width=12cm,height=12cm,keepaspectratio]{graphs/Model2.pdf}}
+\includegraphics [width=0.75\textwidth ]{graphs/Model2.pdf}
 %\includegraphics [width=6in, height=3in]{Model2.pdf}
 \caption{Cross covariance comparison of model2}
 \end{center}
@@ -48,7 +59,7 @@
 \begin{figure}[H]
 \begin{center}
 %\includegraphics [scale=.6]{Model3.pdf}
-\fbox{\includegraphics [width=12cm,height=12cm,keepaspectratio]{graphs/Model3.pdf}}
+\includegraphics [width=0.75\textwidth ]{graphs/Model3.pdf}
 \caption{Cross covariance comparison of model3}
 \end{center}
 \end{figure}
