--- a/main_doc.tex
+++ b/main_doc.tex
@@ -25,8 +25,8 @@ Advisor: Dr. Haimeng Zhang\footnote{h\_zhang5@uncg.edu}\\ \small{University of N
 \input{chapters/Introduction.tex}
 
 %%------------------------------------------------------------------%%
-\chapter{Literature Review (due August 28)}
-%\input{chapters/literature.tex}
+\chapter{Literature Review}
+\input{chapters/literature.tex}%
 
 
 %%------------------------------------------------------------------%%
