--- a/Dissertation.tex
+++ b/Dissertation.tex
@@ -53,8 +53,11 @@
 
 \newcommand{\eqn}[1]{{\begin{equation}}{#1}{\end{equation}}}
 
+%\newcommand{\beq}{\begin{equation}}
+%\newcommand{\eeq}{\end{equation}}
+
 \newcommand{\beq}{\begin{equation}}
-\newcommand{\eeq}{\end{equation}}
+\newcommand{\eeq}{ \end{equation} }
 
 \newcommand{\blue}[1]{\textcolor{blue}{\emph{#1}}}
 \newcommand{\red}[1]{\textcolor{red}{\emph{#1}}}
@@ -164,7 +167,7 @@ In memory of my fater, Donald Anthony Vanlangenberg
 
 %%------------------------------------------------------------------%%
 \chapter{Introduction}
-\input{chapters/Introduction.tex}
+\input{chapters/Introduction_2.tex}
 
 %%------------------------------------------------------------------%%
 \chapter{Literature Review}
@@ -173,18 +176,18 @@ In memory of my fater, Donald Anthony Vanlangenberg
 
 %%------------------------------------------------------------------%%
 \chapter{Covariance and Variogram Estimation on the Cricle}
-\input{chapters/circle.tex}
+\input{chapters/circle_2.tex}
 
 %%------------------------------------------------------------------%%
-\chapter{Random Process on a Sphere}
-\input{chapters/sphere.tex}
+\chapter{Parametric Models on a Sphere}
+\input{chapters/sphere_2.tex}
 
 %%------------------------------------------------------------------%%
-\chapter{Global Data Generation on the Sphere}
-\input{chapters/datageneration.tex}
+\chapter{Global Data Generation and Estimation on the Sphere}
+\input{chapters/datageneration_2.tex}
 
 %%------------------------------------------------------------------%%
-\chapter{Future Research (due August 28)}
+\chapter{Future Research}
 \input{chapters/future.tex}
 
 %%------------------------------------------------------------------%%
