--- a/main_doc.Rnw
+++ b/main_doc.Rnw
@@ -21,7 +21,7 @@ Advisor: Dr. Haimeng Zhang\footnote{h\_zhang5@uncg.edu}\\ \small{University of N
 \newpage
 %%------------------------------------------------------------------%%
 \chapter{Introduction}
-\input{chapters/Introduction.tex}
+\input{chapters/Introduction_2.tex}
 
 %%------------------------------------------------------------------%%
 \chapter{Literature Review}
@@ -30,15 +30,15 @@ Advisor: Dr. Haimeng Zhang\footnote{h\_zhang5@uncg.edu}\\ \small{University of N
 
 %%------------------------------------------------------------------%%
 \chapter{Covariance and Variogram Estimation on the Cricle}
-\input{chapters/circle.tex}
+\input{chapters/circle_2.tex}
 
 %%------------------------------------------------------------------%%
-\chapter{Random Process on a Sphere}
-\input{chapters/sphere.tex}
+\chapter{Parametric Models on a Sphere}
+\input{chapters/sphere_2.tex}
 
 %%------------------------------------------------------------------%%
-\chapter{Global Data Generation on the Sphere}
-\input{chapters/datageneration.tex}
+\chapter{Global Data Generation and Estimation on the Sphere}
+\input{chapters/datageneration_2.tex}
 
 %%------------------------------------------------------------------%%
 \chapter{Future Research (due August 28)}
