--- a/main_doc.tex
+++ b/main_doc.tex
@@ -1,5 +1,4 @@
 \input{template.tex}
-\usepackage{graphicx}
 
 \usepackage{Sweave}
 \begin{document}
@@ -46,4 +45,8 @@ Advisor: Dr. Haimeng Zhang\footnote{h\_zhang5@uncg.edu}\\ \small{University of N
 \input{chapters/future.tex}
 
 \bibliography{biblography}
+
+\section*{\centering Appendix A } \label{appendixA}
+\input{chapters/appendixA.tex}
+
 \end{document}
