--- a/main_doc.Rnw
+++ b/main_doc.Rnw
@@ -1,5 +1,4 @@
 \input{template.tex}
-\usepackage{graphicx}
 
 \begin{document}
 \bibliographystyle{apalike}
@@ -45,4 +44,8 @@ Advisor: Dr. Haimeng Zhang\footnote{h\_zhang5@uncg.edu}\\ \small{University of N
 \input{chapters/future.tex}
 
 \bibliography{biblography}
+
+\section*{\centering Appendix A } \label{appendixA}
+\input{chapters/appendixA.tex}
+
 \end{document}
